<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/usernameEditTextSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/enter_a_username"/>
    <EditText
        android:id="@+id/emailEditTextSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditTextSignUp"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_an_email_id"/>
    <EditText
        android:id="@+id/passwordEditTextSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditTextSignUp"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:hint="@string/enter_a_password"/>
    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditTextSignUp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up"/>

    <TextView
        android:id="@+id/textViewSignUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSignUp"
        android:text="@string/already_have_an_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/textViewSignUp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSignUp1"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/design_default_color_primary_dark"/>



</RelativeLayout>